--- a/web/index.html
+++ b/web/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit this template
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ohana Vet - Login</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <div class="container">
+    <div class="left-panel">
+      <img src="images/logo.png" alt="Ohana Vet Logo" class="logo">
+      <img src="images/image2vector.svg" alt="Icono vacunación" class="icono-vacuna">
+      <div class="title">
+        <h1>Vacunación<br><span>de mascotas</span></h1>
+      </div>
+      <p class="slogan">Porque su salud también es tu tranquilidad.<br>Consulta sus vacunas con un solo clic.</p>
+    </div>
+
+    <div class="right-panel">
+      <h2>Únete y accede al sistema de vacunación más confiable para tu mascota</h2>
+      <form>
+        <label>Email</label>
+        <input type="email" placeholder="johndoe@email.com" required />
+        
+        <label>Contraseña</label>
+        <input type="password" placeholder="********" required />
+
+        <button type="submit" class="btn">Sign Up</button>
+      </form>
+      <p class="register">¿Aún no tienes cuenta? <a href="#">¡Crea una ahora!</a></p>
+    </div>
+  </div>
+
+  <script src="js/main.js"></script>
+</body>
 </html>
