--- a/web/index.html
+++ b/web/index.html
@@ -4,16 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ohana Vet - Login</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./cssvacunas/style.css">
 </head>
 <body>
   <div class="container">
     <div class="left-panel">
-      <img src="images/logo.png" alt="Ohana Vet Logo" class="logo">
-      <img src="images/image2vector.svg" alt="Icono vacunación" class="icono-vacuna">
-      <div class="title">
-        <h1>Vacunación<br><span>de mascotas</span></h1>
-      </div>
+        <img src="./imagenes/logo.png" alt="Ohana Vet Logo" class="logo">
+        <img src="./imagenes/icono.png" alt="Icono vacunación" class="icono-vacuna">
+       <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700&display=swap" rel="stylesheet">
       <p class="slogan">Porque su salud también es tu tranquilidad.<br>Consulta sus vacunas con un solo clic.</p>
     </div>
 
