fix(Login):Página de Inicio de sesión

--- a/web/index.html
+++ b/web/index.html
@@ -10,8 +10,8 @@
   <div class="container">
     <div class="left-panel">
         <img src="./imagenes/logo.png" alt="Ohana Vet Logo" class="logo">
-        <img src="./imagenes/icono.png" alt="Icono vacunación" class="icono-vacuna">
-       <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <img src="./imagenes/icono.png" alt="Icono Vacunas" class="icono-vacuna">    
+        <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700&display=swap" rel="stylesheet">
       <p class="slogan">Porque su salud también es tu tranquilidad.<br>Consulta sus vacunas con un solo clic.</p>
     </div>
 
